k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: substrait-fiddle
    tier: backend
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: substrait-fiddle
    tier: backend
